presentation, first set of notes

--- a/papers/paper_refs.tex
+++ b/papers/paper_refs.tex
@@ -49,6 +49,11 @@
     \item \href{https://link.springer.com/content/pdf/10.1007/s00220-019-03366-y.pdf}{Aspects of Defect Topology in Smectic Liquid Crystals}
     \item \href{https://www.math.arizona.edu/~anewell/publications/Geometry_Phase_Diffusion_Eq.pdf}{The Geometry of the Phase Diffusion Equation}
 \end{enumerate}
+
+\section{Other Refs}
+\begin{enumerate}[(i)]
+\item placeholder
+\end{enumerate}
 \end{document}
 
 
