--- a/papers/paper_refs.tex
+++ b/papers/paper_refs.tex
@@ -42,7 +42,7 @@
     \item \href{https://pdf.sciencedirectassets.com/271587/1-s2.0-S0167278900X02825/1-s2.0-0167278994901996/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEMv%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLWVhc3QtMSJHMEUCIFewl8lIqJuiTqChZzvh6zMZc8svolvdFNFHREdvqtxBAiEAvTWlyuBiTbOASmyVwWzTGOeNNE3gG%2B3HrfEEmeNXs3cq0gQIVBAFGgwwNTkwMDM1NDY4NjUiDCqdfRgkeRbURa6TISqvBCUMcsEGGPF8SANr%2BiK%2BUgDDqLu9P50aunmd793EBTbXm0eKmA%2B3GC%2B3faNn9FD40IHx4UFzeWTgJhVJjuILV9%2BlxNlaQv2EezB05HnNNYcTYrRC3R%2FZluqBGNECiQMcBZmPgPwEV9cVcsb44P71y0GqfAYDb%2F8698XYu7poFamSbf%2FbGqUnrIdF59pt9bIqy%2BTwRNhtxKz7Lf%2Bfq7KWdRolPEWPF6grin1yu5heXs7y8%2FHBTOtX0H3EO4GBp0t1QamLHsDxaUA5cRUyj3t8gGLRkcoOrRdNxT2EeTpr2RTKh5ipXhWZcH5My5oVUMIVqg%2BxWWgKxVixSq32Klmcbm2iz6So1fNQDnx0TGwLTpunR1o1C8EHh9AxINxGvq0Ccdfe8GolqGnsZiHm9JX%2Bx0KMBjupowq1Kxqojsz0Hqf59ovcNOVUB6RxBCzr0OitLfhWCiu7IHnsjPFjbcBwwjJk6y99xVSGBfvxZFRMfaYUMKQXzALFsHaNd%2FAYbBa73DVWZjb%2FGS8UCg0NOBQO13Pwf%2FcWp14zcabvgt5USC8QyNT52D8kjwWUUWuGERsaWGYPDUHrOsfAfRK%2FwAschqzNCmOaBpE5TDJgat10sDWKZ3E4V9RW3t0xunYeOJgNxHkMGV0W2u2%2B36J8i%2BqZRtsfYaXbVe4KTPAF9UKfoPSGLuRtNQ1FOpLut9C93ouk37cYaGvoRRG17nsO4iVoVnugwOKx%2BoM5j%2FbgYpQ1I3IwwpK7mAY6qQFQUAjbZjrkj%2FtxAC3r0Plf5fstjRDUFSc8mk9TQWnq7Uer%2FNofL8AqoqicIbYYjdb3IIfgu1vPbHCOF5%2BqAUmpKGW7Z%2BGDJVYfpuRqvmpIK0ZOVWKZqS%2Bk7VyAtroE3FE7GmGiBjqmhb67RZ17JIbgbO1dbSqlaM0RZVdMqGcnl1EZ%2BScZGPN6UIaxWwqHMUxB9ayOK%2FEXL6v1vtqIfXOcLDyUZ6RL%2F4WT&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20220831T035615Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYWNZHTNEE%2F20220831%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=b29481f485bd46faff05fc17c6726355c75f67a00df24f648e7dde60e533c180&hash=7af029b8b5119e8c04f858a2e16dbcb3a3837255088ba43b2b70c295617074d4&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=0167278994901996&tid=spdf-44ba6d3a-220c-4c21-955b-4853797e7514&sid=f4108f064053494679698ac9f79c6b821331gxrqa&type=client&ua=4d54575502550a56575a&rr=7432d5d449e9a6ee}{Towards a Universal Theory for Natural Patterns}
         \item Coudln't find
         \item \href{https://pdf.sciencedirectassets.com/271587/1-s2.0-S0167278900X02618/1-s2.0-0167278984901817/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEMv%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLWVhc3QtMSJHMEUCIFmn1MWksKotrUDn9rAl9wFuqxQxWPXqeJNLQBxR43RlAiEA3YO5hTfwLg4CW0J1rEiSV86Q4mEyuLLNKhAkAoY%2BNMoq0gQIVBAFGgwwNTkwMDM1NDY4NjUiDJlU7OuYzIDkhpaNGyqvBPQNjLHRDeVhnmdDYqm1Uk32jB19%2FkE4rkeYfBVJggpPhRHzAZs39kHF1EXFfNhc431vrWHPyFkwTh1mCct7lN8nnF7Bf4Y16jG6cG5ggztxDja6eOcZI8QwlHTKj6AO%2F1fivVecjUsvYtyZYZPzJtx1yawzPP%2Fc9Xa4Hj238Zh%2F7nbT%2Bzvc7AYksLaSgHwJuswGIdU%2F8sQLlH%2Bh7o4la4DfKli6u0lBQD2GYPJUc%2BB2wJkLVfzO0ui7gf0he7lwMsi2KH5a0JoYkUG4AoiRdtK1mq2XsRPqwnvK34yjQQnNDR3COF1QuLDwB8VG4mdNK%2Frq1Fw0R%2BowIoswKlqzpSiuzP5mGNTecEPJ3RtC7m%2BjPnzpxXejJeetpMDUOIkGtNSlbYOXaIhaR%2F%2FpWbmANxSCZ4KApk5GxDSMIiTpRCXHjc4FnFH%2Fv0r8DslRvpgNvkx2NzpjfQRE%2FZBdgE53%2FdareeMqkMT4K%2BnkUIoi7T22z8b1%2BQG6w8T5dhjp3KOIMTklsaxT%2FJwaKBb2ufYRLpEpxMYjJj0VldYaBIp7YKMvz%2BgoGcPA%2BBeCrIKze08%2FEB%2FAvRQPlHi%2BcpLs9U1UK2Xi%2BKDM%2Fmtu9LisQlJi2XQiQAjY%2FcrMAYWmVqTb%2F5ETXshw5tUsL%2BUr843NMFIrUC3OwJ9nK0wQxkZvecFv%2BgK4rMCc1Gig%2Bc1HhyvA7d3%2FHNnM%2FM1ZzJyw7v%2FnKwLS6%2FDoJGqu9vJWrBAZhDvH04swuJm7mAY6qQE%2FMnt3h8GuV1h6CHDQKSmV%2BSpk0SbakzUaf3qLHJNqTvcsc8RTxdj0K6aOGjBrxWIcmPMdUtnhFEtvh%2FVagRlX2MAcK80OciCfuDp7LyLcHZEx%2FNDSl7pjZmaCn54f%2BvMJ3wxTDW3Stf%2BeSP5fN6fstjIWUhUK%2BbFzufU%2BRprzgyrVzc9ZEwP1bsoA1YHtFXW%2BEf9uVbnyHea70SjZkmhYY6UhKL1tqLwx&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20220831T035907Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTY7GRAGZ45%2F20220831%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=fc56a0f44faf3497a9fa217b944ac0032c45c1b9a6b9630463946ec1bf4d2eb4&hash=ac0e3fb5001803b343ad790bd374d1eb3a3b5de754fb1ad8fc5e090b14aff76f&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=0167278984901817&tid=spdf-07721bbc-be4d-4664-835c-54bf62ff820e&sid=f4108f064053494679698ac9f79c6b821331gxrqa&type=client&ua=4d54575502015e555306&rr=7432da070e74a6eb}{Convection Patterns in Large Aspect Ratio Systems}
-    \item \href{https://pdf.sciencedirectassets.com/271587/1-s2.0-S0167278900X00413/1-s2.0-0167278996000735/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEMv%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLWVhc3QtMSJHMEUCICmbWyR64A1wCI3Hwg0ZAgI5HIKnTPMRuOHwDh8dvgCFAiEAo%2Fvnx31Z1bd2dlu%2B%2FTBKoMzF7OknS8%2BgUliZTPlrYEwq0gQIVBAFGgwwNTkwMDM1NDY4NjUiDPr4xcbS9wqegfVPTiqvBO1WuMO530B3ssrnBJBF2jZDPbMMGvRGoFzsHIM8EpkK08FfaRD5RNFVZxYkJYQVYTxa4ns4mxO3oA5T1V3Q8iMQd5BelLkb5xlTX17Eob3KM7y9KK1zGhl9KY9rVR610tnFbxJNFYRWcb2hfHIkUhm%2Bmjlg8cybbS3BNU%2Fry6O9Q2XZIAZgccbYdizTpcjVMRcnMvPEcLYqR7LexxPXdtpqfSZ5GXHvAeUfj1tU%2FvSpqtdKlm2eQj3bdww%2B0%2B4Xiava75hcOqspQwvuoObW1Z3dS0C0nsyA%2FYHwwcv16QVKkX4DK1T6r3%2BHBZfQ5ypS3Us8VOfCdp7jexHz7%2FVsNOgGsjVPPyPRrDIfmN68UyXfr5vvTewd2%2BHStXu%2B1PQzF7pZ1DgfgNZ69V%2FCasRg44o6nK3B%2F04EBWfMz6wGieRBvpaUn8vUmPvbNgqntQ54LTYD49FlNJ9k286nQWFR6CxSO7Pk3fPjdgRA9wvC8%2BvlQFxxoKN75XqQ6IYh6awfJ%2F1IF3GwF2Gdr7VZS5Sy1vNeeHZOF38lvshcxoJW3T3PVN6ND4RiT5nYBUjCylITe5gTzcppmByoOOn7c7exfmEwitcrUrVHCu16omd9baWv6%2FzacUhVr4A02OzgcwSxNt9M3X3stas%2BIKyahpP%2FLVuxoHmTl50NczRduwjyfeBgrcCu1FU9ro6Fwfh7LdEHLaINFCRBNPfyTeipDNBgbw9R2OFQXIs0X6jZuWaryKAw6ZW7mAY6qQFMWxe1bdc%2FwqwqcL6mCyutB%2BaxuC5WRGi8jw36M%2FjG5VdiunTYwJwkaf7sFeNK4lIp%2BCMzJKKR7vQIAkxJLXhTQMu%2BOstiT07iIvnDIC6TkIg7%2FVRLxD3tLR3cP9uUt4KUles514ga8GtRecA62d8KUwQn2em9XmR7jEyKhx4VU7s9fAPHqI6UpQYUxEoQi3rKjOmBv1g4axZh1gt%2BRxhO9wP1yha84rUX&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20220831T041003Z&X-Amz-SignedHeaders=host&X-Amz-Expires=299&X-Amz-Credential=ASIAQ3PHCVTYRORY7RZH%2F20220831%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=33c46dee6ce60298dd9043b562ade6356f713732db70f3b1fb742bae8342c347&hash=2bd236b77bbc2fe06aaf61faddfc1011fff08b04c4195c0dedf7f60afcae1e04&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=0167278996000735&tid=spdf-be71a088-5432-4119-8437-d62940a7ffbf&sid=f4108f064053494679698ac9f79c6b821331gxrqa&type=client&ua=4d54575503015e5b545b&rr=7432ea0978fd1b0f}{Defects are weak and self-dual solutions of the Cross-Newell phase diffusion equation for natural patterns}
+    \item \href{https://pdf.sciencedirectassets.com/271587/1-s2.0-S0167278900X00413/1-s2.0-0167278996000735/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEMv%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLWVhc3QtMSJHMEUCICmbWyR64A1wCI3Hwg0ZAgI5HIKnTPMRuOHwDh8dvgCFAiEAo%2Fvnx31Z1bd2dlu%2B%2FTBKoMzF7OknS8%2BgUliZTPlrYEwq0gQIVBAFGgwwNTkwMDM1NDY4NjUiDPr4xcbS9wqegfVPTiqvBO1WuMO530B3ssrnBJBF2jZDPbMMGvRGoFzsHIM8EpkK08FfaRD5RNFVZxYkJYQVYTxa4ns4mxO3oA5T1V3Q8iMQd5BelLkb5xlTX17Eob3KM7y9KK1zGhl9KY9rVR610tnFbxJNFYRWcb2hfHIkUhm%2Bmjlg8cybbS3BNU%2Fry6O9Q2XZIAZgccbYdizTpcjVMRcnMvPEcLYqR7LexxPXdtpqfSZ5GXHvAeUfj1tU%2FvSpqtdKlm2eQj3bdww%2B0%2B4Xiava75hcOqspQwvuoObW1Z3dS0C0nsyA%2FYHwwcv16QVKkX4DK1T6r3%2BHBZfQ5ypS3Us8VOfCdp7jexHz7%2FVsNOgGsjVPPyPRrDIfmN68UyXfr5vvTewd2%2BHStXu%2B1PQzF7pZ1DgfgNZ69V%2FCasRg44o6nK3B%2F04EBWfMz6wGieRBvpaUn8vUmPvbNgqntQ54LTYD49FlNJ9k286nQWFR6CxSO7Pk3fPjdgRA9wvC8%2BvlQFxxoKN75XqQ6IYh6awfJ%2F1IF3GwF2Gdr7VZS5Sy1vNeeHZOF38lvshcxoJW3T3PVN6ND4RiT5nYBUjCylITe5gTzcppmByoOOn7c7exfmEwitcrUrVHCu16omd9baWv6%2FzacUhVr4A02OzgcwSxNt9M3X3stas%2BIKyahpP%2FLVuxoHmTl50NczRduwjyfeBgrcCu1FU9ro6Fwfh7LdEHLaINFCRBNPfyTeipDNBgbw9R2OFQXIs0X6jZuWaryKAw6ZW7mAY6qQFMWxe1bdc%2FwqwqcL6mCyutB%2BaxuC5WRGi8jw36M%2FjG5VdiunTYwJwkaf7sFeNK4lIp%2BCMzJKKR7vQIAkxJLXhTQMu%2BOstiT07iIvnDIC6TkIg7%2FVRLxD3tLR3cP9uUt4KUles514ga8GtRecA62d8KUwQn2em9XmR7jEyKhx4VU7s9fAPHqI6UpQYUxEoQi3rKjOmBv1g4axZh1gt%2BRxhO9wP1yha84rUX&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20220831T041003Z&X-Amz-SignedHeaders=host&X-Amz-Expires=299&X-Amz-Credential=ASIAQ3PHCVTYRORY7RZH%2F20220831%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=33c46dee6ce60298dd9043b562ade6356f713732db70f3b1fb742bae8342c347&hash=2bd236b77bbc2fe06aaf61faddfc1011fff08b04c4195c0dedf7f60afcae1e04&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=0167278996000735&tid=spdf-be71a088-5432-4119-8437-d62940a7ffbf&sid=f4108f064053494679698ac9f79c6b821331gxrqa&type=client&ua=4d54575503015e5b545b&rr=7432ea0978fd1b0f}{Defects are weak and self-dual solutions of the Cross-Newell phase diffusion equation for natural patterns} Good Background Info
 \item \href{https://pdf.sciencedirectassets.com/271541/1-s2.0-S0375960100X13382/1-s2.0-037596019190691Z/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEMz%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLWVhc3QtMSJIMEYCIQDmgJCN2AXkLqtHlQc%2BSmt23BPsqbA%2FWFrocuHJ5wB4BAIhAM%2FiV0%2BhuJU5d0JkH2aI6SD0IcEPYQexdv%2F66XjjZa3GKtIECFUQBRoMMDU5MDAzNTQ2ODY1IgzlMl0HU6icOlO2OLUqrwTmMqvLGAzFqfbnF7Cv7v98kHGPoB%2FYF%2FFBxg7s1F8d8bifhuil9hzMLkFk4wsyGrDrPjskhbLBGDlyPNaMvPL02VoQvVQQdAI2Mev9OOZdZmVx0RBJJYzRdyXwQNUVqjpkRuEuOrLmIH3q9122ts98vZ043Ht4fdEaMfP7QULxQuMPr9oYcjVp0UCbVbs0tQwvQyLhRq61SxRta7rATbBmnKXxLhuE5B44QVoKKj4p7PG9WveN0B2YsTzOye3ka0u35%2FrO7vE7EP3vOhZ2VK4y4adI%2FcSW4iamBgf%2F6J6zxzakx0GLGDed10WjOsoEuNzKzKX3pf1Z%2BD%2Frv1CoI1jrsr6knS6tT5IW9fLOXlJqsgl%2BDmrpd8hSP%2Bf9lponX8jSYxi3q6ICp68RMmZOYihkQIyS6EfuOjrRsqTgQBLMXBtYQNvJefhTTkt%2BCLCcsVESTMuHK4D4Mfnv%2BkTRE6C7kk8%2BduqsvUANhghmH%2FFyBA3ZX7ZvhwzW0px0ysyeq%2FvrznYznvA66crCMPZCAZ8nMs844QTaShXdaOSTkgs1KjF8MITLsDMqqhUiOxenwyIT1bCmCObo3m6OtRnZiybqICNv4sfagR3bwhvkfxzgaYz0VIYJ%2F5NofniPpY7eTuP8gPCled%2FjvKmZbropA2%2F%2B3ldYFQfSmB2F8iFjv3%2Bq2%2BQQ0LQqFVK%2BxEyINNP9T1lMhQmPiX3ZaqD6H9L7sA%2BtofzF7IOGroipJ9Tr31rGMO%2Bsu5gGOqgBqAJ177QWbZXYnyInbh03fR%2FCtJJiVGegVZD1KVfxFMVbIIyxFido1ooHEGM%2F6NTjI3Qb9PQkuiKq%2FR74BCOsyYMYLpG%2FMTduVKwOkY4SEMjb6qepRKJnJXUv3ZKrfXT%2Fga44QEYuXDIgyWtBK5hwv8YWPYLZuAVrZlW4WaEXwYx2ksKL82WyIBm2kYYWE69S9WgSzs2EekG%2BRep3LUoEc4lnG4Ave9XC&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20220831T041218Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYYLVF2N6X%2F20220831%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=7667da2fbbb74b6639bc8128efd3ee63232c4032ce9f0015b62a1f08591ed86e&hash=11854fd2fdbbbfc1d59068dd657af6ae7f2fd381b9c20f50f3edc1d66c5f70c2&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=037596019190691Z&tid=spdf-288c08ba-e923-43b8-a6de-ec98e989788f&sid=f4108f064053494679698ac9f79c6b821331gxrqa&type=client&ua=4d54575503045b5a0206&rr=7432ed58aeef1b14}{Singular solutions of the nonlinear phase equation in pattern-forming systems}
     \item Couldn't find
     \item \href{https://link-springer-com.ezproxy2.library.arizona.edu/content/pdf/10.1007/s00332-008-9035-9.pdf}{A Variational Theory for Point Defects in Patterns}
@@ -52,7 +52,7 @@
 
 \section{Other Refs}
 \begin{enumerate}[(i)]
-\item placeholder
+    \item \href{https://reader.elsevier.com/reader/sd/pii/S0167278903002173?token=C9ADADC9A05E67C488D5776BD27261885B9517594F4F32DDBFA24510FCC66DC40F1CD86ECEA29C40869C37D271798AEE&originRegion=us-east-1&originCreation=20220903050236}{Global Description of Patterns far from Onset: A case study} Good Background for Numerics
 \end{enumerate}
 \end{document}
 
