--- a/papers/paper_refs.tex
+++ b/papers/paper_refs.tex
@@ -53,6 +53,12 @@
 \section{Other Refs}
 \begin{enumerate}[(i)]
     \item \href{https://reader.elsevier.com/reader/sd/pii/S0167278903002173?token=C9ADADC9A05E67C488D5776BD27261885B9517594F4F32DDBFA24510FCC66DC40F1CD86ECEA29C40869C37D271798AEE&originRegion=us-east-1&originCreation=20220903050236}{Global Description of Patterns far from Onset: A case study} Good Background for Numerics
+    \item \href{https://reader.elsevier.com/reader/sd/pii/S0021999117304588?token=81C486242EBF6C25D85661B9D2EB516D8E9E85C03AEE1E4FFD7053D45642E780191226B036A6271B42C934E16D7D4C97&originRegion=us-east-1&originCreation=20220923055540}{Two Point Correlations}
+    \item \href{https://reader.elsevier.com/reader/sd/pii/S1359645417310443?token=5BB9017DC48FDC8D2BE1AB0639F728DFBF8D9845862F5916F1DE464FC865E00597F1760B5E3D83851F537C7589BCC619&originRegion=us-east-1&originCreation=20220923055710}{Materials Science CNN}
+    \item \href{https://epubs-siam-org.ezproxy2.library.arizona.edu/doi/book/10.1137/1.9780898717839}{Leveque numerics}
+\item \href{https://pdf.sciencedirectassets.com/271541/1-s2.0-S0375960100X05075/1-s2.0-0375960190900923/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEAEaCXVzLWVhc3QtMSJGMEQCIH3n6TOsPFVeGlAWg%2FY7ugXGs0f45TA1fxvXxqPJVv8OAiBLXLXITxDEn%2FZGpST25oWeq0YMuobmpNLtHPISqcq1eirVBAiq%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F8BEAUaDDA1OTAwMzU0Njg2NSIMwJVJixl%2BCtV4Q%2B7TKqkEPa4J9oOFFhDcap9d%2FxGYq4lLWXrzt3lJxbbDK2oYZAMkBMiRy1iOhOv2tTWGY%2B%2FOqsiIIg6Zq%2F8Pm1CqKX6XFmiOoDKgWyLRQy8F2Mi5Xld5ClP7kl%2Fc5%2B5qbiLDBps0WsGtJv%2B1Yf137tEksgWtRGW1BJqY9riGyDwfDGFzeWb9VkPwZ73sJhfe5OIMkMq7d%2FTfIk%2FX0FQPO9vYHmDerphnA%2FiLsmaCb%2B6JH%2Fjc%2FKVfjbEhrcrLeetJyxwcMioZW1OuncQ55nW2uWRuVGH4iG3Q9hNaASZXndpTM0z1C5OJcqgPiw3VieF1GbGBhVA%2FkcWtOh901wUK7FMTe6M5vbedlOLCJ9eLaVTiY7nUCqfFIuNdZ%2Fgov2VyaHmT%2FlBlsL0s1l92CWHnIenN8%2Fbo%2Bztm6%2Fk5lIv%2FsfbsF%2Bv6K0gC0yTc7GpvYi5O7prwPfYgE1olo1Nz1da8zH0nKK%2FkS3UIyvB9D2RwW3hAdcYk3Fi5SzVu5c5MdIYXjMxM0jxR7aZ8LxC3JQPfFRtlpbe7IjXWSXYTkUgBiE9g7%2FfPi7Kul2bUYoZQZY68bzV5R50Hx4lXkrUr7dyauCoFgMWPk7sxiRVJ6KjJbmoagMIfDn6%2FJtFtfD5Hv53nddkP8cVYmf1KlLVklY9tC%2BmC24qysPHTHGvaxm12nkfazkuran0dRlnZhsJG0IVr1cDqznlY83XhuzoD%2BJfDaF7EiAn5v6BQi6Ab%2BCAjJDDCw7eZBjqqAQmqvimyfyceOe7DxQMZmdI3LsCdVAnUJggJ9%2BrBvlC5sMEYL2PCNgAekBOoHSfsZWTgP9nw1%2F9JrcWFN5%2Bo%2BjIOfJyUvv5GJMghbsUtxQrfatrtiVQFeju06MzvC5apHboUQV3uqnxeLkqoedmOQTCS7v3r0mClZg827NFD2AjMU75W1znjhsfp9%2FGN5Mf7sbzUY4RQNhre0N5ErShSAah%2BYaAoVSwrHnj5&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20220923T182718Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTY3NON3GWX%2F20220923%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=a195ff1c9d1da79ae14b5733b85134874dc86d2f4e7764678b79539d488ade31&hash=fe3666b5f7ab86ebc3897aaae3791c0fa7c768466f2c5227ede04717025b0595&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=0375960190900923&tid=spdf-833b7680-204c-4e8c-a3ca-c8cae75f7c47&sid=48783b7021a2c04ada38a3010fd3b966345bgxrqa&type=client&ua=575007555051545d&rr=74f55568edf8a71b}{More numerics}
+
+
 \end{enumerate}
 \end{document}
 
